Added all my favorite movie's details and plot. Added all css that needed to be done.

--- a/index.html
+++ b/index.html
@@ -1,20 +1,54 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<title>Movie Name</title>
+  	<title>Batman v Superman: Dawn of Justice (Ultimate Edition)</title>
   	<meta charset="UTF-8">
-
+    <link rel="stylesheet" href="spoilers.css" />
   </head>
   <body>
-  	<h1>Movie Name</h1>
-  	<p>Released: </p>
+  	<h1>Batman v Superman: Dawn of Justice (Ultimate Edition)</h1>
+  	<p>Released: March 25th, 2016 </p>
     <h2>Starring</h2>
     <ul>
-      <li>Actor</li>
+      <li>Henry Cavill as Clark Kent/Superman</li>
+      <li>Ben Affleck as Bruce Wayne/Batman</li>
+      <li>Gal Gadot as Diana Prince/Wonder Woman</li>
+      <li>Amy Adams as Lois Lane</li>
+      <li>Diane Lane as Martha Kent</li>
+      <li>Jessie Eisenburg as Lex Luthor</li>
+      <li>Jeremy Irons as Alfred Pennyworth</li>
     </ul>
     <h2>Movie Quote</h2>
-    <p>Quote</p>
+    <p>"Be their hero, Clark. Be their monument, be their angel, be anything
+      they need you to be... or be none of it. You don't owe this world a thing.
+       You never did."-Martha Kent
+    </p>
     <h2>Plot</h2>
-    <p>Plot in your own words</p>
+    <p>Bruce Wayne was in Metropolis the day Superman stopped General Zod and
+       the evil Kryptonians from taking over the world and turning the world
+       we know into Krypton. In that fight, Bruce Wayne witnessed his very own
+       Wayne Enterprises building crumble. This sparked Batman's hatred for Superman.
+       Lex Luthor devises a plan to get the two heroes to fight to the death. Lex
+       frames Superman in the deserts of Africa and in the Capital of the United States.
+       This sways public opinion of Superman for the entire world. People begin to question him.
+       Lex does this because he blames God for not helping him when he needed it most.
+       He obviously had a rough childhood. Lex not only frames Superman though, he also
+       goes after Batman. Using one of Batman's recent catches, Lex has someone in prison kill
+       him to make it look like the bat brand is really a sign of death among inmates in prisons.
+       Clark investigates this "Batman" and finds out that he is taking things too far.
+       After all the investigations and Batman preps for his fight with Superman, Lex takes
+       Martha Kent hostage to really make Superman do what he wants. This ends up working and
+       the two heroes go head to head. Batman ends up having Superman weakened by Kryptonite,
+       but in his last breath, he asks Batman to save his mother. This changes Batman because
+       after all this time, he thought Superman was just an alien here to try and help, but ended up causing trouble.
+       This is the moment when Batman sees Superman as part human after all. In the end though, Lex had a bigger plan
+       to kill the Kryptonian Hero. Doomsday. Lex unleashes Doomsday on the city and Superman, Batman, and Wonder Woman
+       rise to the challenge. <span class="spoil-protect">In the end, kyptonite is the only thing that can kill Doomsday, the same kryptonite spear
+       that Batman was going to use on Superman. Superman realizes that he is the only one who can finish Doomsday, but
+       the kryptonite will weaken him too. It is a sacrifice he must make for the safety of the world. In the end,
+       Superman ends up saving the world at the cost of his own life. Funerals were held for both Clark Kent and Superman,
+       but there is an even bigger threat on the way. Bruce and Diana Prince must form the Justice League to combat this
+       coming threat.</span>
+      </p>
   </body>
 </html>
